@@ -59,7 +59,7 @@ class ZMFileCache extends ZMObject implements ZMCache {
     public function init($group, $config) {
         // set these, all others are passed through 'as is'
         $config['automaticSerialization'] = true;
-        $config['cacheDir'] = ZMSettings::get('zenmagick.core.cache.provider.file.baseDir').$group.'/';
+        $config['cacheDir'] = ZMSettings::get('zenmagick.core.cache.provider.file.baseDir').$group.DIRECTORY_SEPARATOR;
         $this->group_ = $group;
         $this->available_ = $this->_ensureCacheDir($config['cacheDir']);
         $this->cache_ = new Cache_Lite($config);
